Updated website icons and fixed alignment issue

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -11739,3 +11739,9 @@ body.dark-mode .text-dark i {
   align-items: center; /* Center content */
   text-align: center; /* Center text */
 }
+
+.footer-icon {
+  text-decoration: none !important; /* Removes white underline */
+  display: inline-flex; /* Makes sure all icons are aligned */
+  align-items: center; /* Aligns icons vertically */
+}  
